# Fortune-Algorithm

./: Fortune Algorithm.html  Fortune Algorithm.sln  README.md  Побудова діаграми Вороного алгоритмом Форчуна.pptx
Fortune Algorithm/: ArcNode.h  Beachline.h  CMakeCache.txt  CMakeLists.txt  Event.h  Fortune Algorithm.vcxproj  Fortune Algorithm.vcxproj.filters  FortuneAlgorithm.h  Fortune_Algorithm.cbp  Frame.h  Makefile  PriorityQueue.h  Vector2D.h  VoronoiDiagram.h  cmake_install.cmake  main.cpp
Tests/1. default/: 1.1 triangle.txt  1.2 rhombus.txt  1.4 table.txt  1.6 circle event cancellation.txt
Tests/2. uncorrect/: 2.2 noisily.txt
Tests/4-5. time & memory/: main.cpp
Tests/5. memory leaks/: description.txt
Tests/default/: 1.5 pattern.txt
Tests/interactivity/: description.txt
Tests/memory leaks/: main.cpp
Tests/risky/: 3.1 vertical line.txt  3.2 horizontal line.txt  3.4 new site between two parabolas (under their control point).txt
Tests/time & memory/: description.txt
Tests/uncorrect/: 2.1 all in one place.txt  2.3 out of border.txt
